config is updated for permission testing

--- a/api_framework/config.ini
+++ b/api_framework/config.ini
@@ -1,7 +1,8 @@
 [Server]
 domain = https://istepanko31.qa-egnyte.com
+endpoint = /public-api/v1/fs/
 admin = admin
 password = apitest2
 puser = power_user
-test_path = /Shared/smoke_test/
+test_path = Shared/smoke_test/
 permission = Viewer
